--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -10,3 +10,15 @@
     overflow-y: auto;
     max-height: 600px;
 }
+
+.left {
+    width: 50%;
+    float: left;
+    text-align: start;
+}
+
+.right {
+    width: 50%;
+    float: right;
+    text-align: end;
+}
