--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -1,6 +1,8 @@
 footer {
+    position: fixed;
     bottom: 0;
     width: 100%;
+    height: 2.5rem;
     text-anchor: middle;
 }
 
@@ -8,7 +10,6 @@ footer {
     width: 50%;
     float: left;
     text-align: start;
-    margin-bottom: 20px;
 }
 
 
@@ -16,5 +17,4 @@ footer {
     width: 50%;
     float: right;
     text-align: end;
-    margin-bottom: 20px;
 }
