--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -44,3 +44,13 @@ main {
     transform: rotate(360deg);
   }
 }
+
+hr {
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
+}
